fixes weird titlebar valign issue

--- a/app/assets/stylesheets/logbook/modules.css.scss
+++ b/app/assets/stylesheets/logbook/modules.css.scss
@@ -4,8 +4,9 @@
   padding: 15px;
   background: white;
   height: 50px;
+  white-space: nowrap;
   .title, .subtitle {
-    display: inline-block;
+    display: inline;
   }
 }
 
