--- a/app/assets/stylesheets/logbook/projects.css.scss
+++ b/app/assets/stylesheets/logbook/projects.css.scss
@@ -11,3 +11,8 @@
   }
   .school-field { @include omega; }
 }
+body.projects {
+  .titlebar a, .leaderboard a {
+    color: $projects-color;
+  }
+}
